# covscript-regex

./: .gitignore  CMakeLists.txt  README.md  make.bat  make.sh  pcre2.hpp  regex.cpp  test.csc  test_gbk.csc  test_regex.csc  test_utf8.csc  unicode.cpp
csbuild/: regex.json  unicode.json
